tests/tools/typecheck/positive/noreturn_error_call.nv
fn fail() : str {
    nova_runtime_error("failed");
}

fn main() : void {
    return;
}
