tests/tools/typecheck/negative/if_condition_not_bool.nv
fn main() : void {
    if (1) {
        return;
    }
    return;
}
